<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">
    <EditText
        android:id="@+id/nameInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_name"/>
    <EditText
        android:id="@+id/phoneInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:inputType="number"
        android:background="@drawable/input_border"
        android:hint="@string/enter_phone"/>
    <EditText
        android:id="@+id/fNameInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_father_name"/>
    <EditText
        android:id="@+id/mNameInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_mother_name"/>
    <EditText
        android:id="@+id/bloodGroupInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_blood_group"/>
    <EditText
        android:id="@+id/addressInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_address"/>
    <EditText
        android:id="@+id/emailInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:background="@drawable/input_border"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>
    <EditText
        android:id="@+id/passwordInputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/input_border"
        android:hint="@string/enter_password"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/login"/>
</LinearLayout>